fix: text overflows

--- a/src/components/record-list/components/record/record.css
+++ b/src/components/record-list/components/record/record.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   padding: 1rem 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -12,12 +13,13 @@
 
 .record__data {
   margin: 0;
-  line-height: 175%;
-}
-
-.record__data {
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+.record__desc {
+  overflow-wrap: anywhere;
+  line-height: 150%;
 }
 
 .record__delete-button {
